docs-archive/apache-airflow-providers-google/22.6.0/_sources/_api/airflow/providers/google/cloud/operators/cloud_run/index.rst.txt
airflow.providers.google.cloud.operators.cloud_run
==================================================

.. py:module:: airflow.providers.google.cloud.operators.cloud_run


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.operators.cloud_run.FAILED_EXECUTION_LOG_FETCH_DELAY_SECONDS


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.operators.cloud_run.CloudRunCreateJobOperator
   airflow.providers.google.cloud.operators.cloud_run.CloudRunUpdateJobOperator
   airflow.providers.google.cloud.operators.cloud_run.CloudRunDeleteJobOperator
   airflow.providers.google.cloud.operators.cloud_run.CloudRunListJobsOperator
   airflow.providers.google.cloud.operators.cloud_run.CloudRunExecuteJobOperator
   airflow.providers.google.cloud.operators.cloud_run.CloudRunCreateServiceOperator
   airflow.providers.google.cloud.operators.cloud_run.CloudRunDeleteServiceOperator


Module Contents
---------------

.. py:data:: FAILED_EXECUTION_LOG_FETCH_DELAY_SECONDS
   :value: 1


.. py:class:: CloudRunCreateJobOperator(project_id, region, job_name, job, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, use_regional_endpoint = False, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Creates a job without executing it. Pushes the created job to xcom.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param job_name: Required. The name of the job to create.
   :param job: Required. The job descriptor containing the configuration of the job to submit.
   :param use_regional_endpoint: If set to True, regional endpoint will be used while creating Client.
       If not provided, the default one is global endpoint.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'gcp_conn_id', 'impersonation_chain', 'job_name')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: job_name


   .. py:attribute:: job


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: use_regional_endpoint
      :value: False



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudRunUpdateJobOperator(project_id, region, job_name, job, gcp_conn_id = 'google_cloud_default', use_regional_endpoint = False, impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Updates a job and wait for the operation to be completed. Pushes the updated job to xcom.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param job_name: Required. The name of the job to update.
   :param job: Required. The job descriptor containing the new configuration of the job to update.
       The name field will be replaced by job_name
   :param use_regional_endpoint: If set to True, regional endpoint will be used while creating Client.
       If not provided, the default one is global endpoint.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'gcp_conn_id', 'impersonation_chain', 'job_name')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: job_name


   .. py:attribute:: job


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: use_regional_endpoint
      :value: False



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudRunDeleteJobOperator(project_id, region, job_name, gcp_conn_id = 'google_cloud_default', use_regional_endpoint = False, impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Deletes a job and wait for the operation to be completed. Pushes the deleted job to xcom.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param job_name: Required. The name of the job to delete.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param use_regional_endpoint: If set to True, regional endpoint will be used while creating Client.
       If not provided, the default one is global endpoint.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'gcp_conn_id', 'impersonation_chain', 'job_name')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: job_name


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: use_regional_endpoint
      :value: False



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudRunListJobsOperator(project_id, region, show_deleted = False, limit = None, use_regional_endpoint = False, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Lists jobs.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param show_deleted: If true, returns deleted (but unexpired)
       resources along with active ones.
   :param limit: The number of jobs to list. If left empty,
       all the jobs will be returned.
   :param use_regional_endpoint: If set to True, regional endpoint will be used while creating Client.
       If not provided, the default one is global endpoint.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: show_deleted
      :value: False



   .. py:attribute:: limit
      :value: None



   .. py:attribute:: use_regional_endpoint
      :value: False



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudRunExecuteJobOperator(project_id, region, job_name, overrides = None, polling_period_seconds = 10, timeout_seconds = None, use_regional_endpoint = False, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), transport = None, verbose = False, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Executes a job and waits for the operation to be completed. Pushes the executed job to xcom.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param job_name: Required. The name of the job to execute.
   :param overrides: Optional map of override values.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param polling_period_seconds: Optional. Control the rate of the poll for the result of deferrable run.
       By default, the trigger will poll every 10 seconds.
   :param timeout_seconds: Optional. The timeout for this request, in seconds.
   :param use_regional_endpoint: If set to True, regional endpoint will be used while creating Client.
       If not provided, the default one is global endpoint.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run the operator in deferrable mode.
   :param transport: Optional. The transport to use for API requests. Can be 'rest' or 'grpc'.
       If set to None, a transport is chosen automatically. Use 'rest' if gRPC is not available
       or fails in your environment (e.g., Docker containers with certain network configurations).
   :param verbose: If True, container ``stdout``/``stderr`` from the Cloud Run job execution
       is fetched from Cloud Logging once the execution finishes and forwarded into the
       Airflow task log. Logs are also forwarded when the execution fails so that the
       container output remains visible for debugging. Requires the service account used by
       ``gcp_conn_id`` to have ``roles/logging.viewer`` on the project. Each task instance
       issues at least one Cloud Logging Read API request (more if the execution produces
       enough log entries to paginate). Failed executions wait briefly before fetching logs
       to catch late-arriving log entries. Requests count against the project-wide quota of
       60 read requests per minute (see https://cloud.google.com/logging/quotas#api-limits).
       Default: ``False``.


   .. py:attribute:: operator_extra_links


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'gcp_conn_id', 'impersonation_chain', 'job_name', 'overrides',...



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: job_name


   .. py:attribute:: overrides
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: polling_period_seconds
      :value: 10



   .. py:attribute:: timeout_seconds
      :value: None



   .. py:attribute:: deferrable


   .. py:attribute:: use_regional_endpoint
      :value: False



   .. py:attribute:: transport
      :value: None



   .. py:attribute:: verbose
      :value: False



   .. py:attribute:: operation
      :type:  google.api_core.operation.Operation | None
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


   .. py:property:: hook
      :type: airflow.providers.google.cloud.hooks.cloud_run.CloudRunHook



.. py:class:: CloudRunCreateServiceOperator(project_id, region, service_name, service, use_regional_endpoint = False, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Creates a Service without executing it. Pushes the created service to xcom.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param service_name: Required. The name of the service to create.
   :param service: The service descriptor containing the configuration of the service to submit.
   :param use_regional_endpoint: If set to True, regional endpoint will be used while creating Client.
       If not provided, the default one is global endpoint.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'gcp_conn_id', 'impersonation_chain', 'service_name')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: service


   .. py:attribute:: service_name


   .. py:attribute:: use_regional_endpoint
      :value: False



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudRunDeleteServiceOperator(project_id, region, service_name, use_regional_endpoint = False, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Deletes a Service without executing it. Pushes the deleted service to xcom.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param service_name: Required. The name of the service to create.
   :param use_regional_endpoint: If set to True, regional endpoint will be used while creating Client.
       If not provided, the default one is global endpoint.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'gcp_conn_id', 'impersonation_chain', 'service_name')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: service_name


   .. py:attribute:: use_regional_endpoint
      :value: False



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



